edited some layout issues for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -11,32 +11,19 @@ a:hover {
   text-decoration: none;
   color: #cc33ad;
 }
-.about-text-true > p {
-  font-size: 1.1em;
-  line-height: 1.75; 
-  font-family: 'Roboto Mono', monospace;
-  padding: 5px;
-}
-
-.about-text-false > p {
-  line-height: 2; 
-  font-family: 'Roboto Mono', monospace;
-  margin: 10px;
-  padding: 10px;
-}
-.baseline {
-  align-items: baseline; 
-}
-.blue {
-  background-color: #D1FCE9;
+.bio-img {
+  max-width: 90%;
 }
 .button {
-  padding: 8px;
-  margin: 8px;
+  padding: 5px;
+  margin: 10px;
   color: #cc33ad;
   border-radius: 8px;
   cursor: pointer;
   border: 1px solid #cc33ad;
+  text-transform: uppercase;
+  box-shadow: 0 2px 2px 0 #cc33ad;
+
 }
 .button:hover{
   box-shadow: 0 2px 6px 0 #cc33ad;
@@ -51,45 +38,6 @@ a:hover {
 }
 .center {
   text-align: center; 
-}
-.choice {
-  padding: 20px;
-  margin: 10px;
-  background-color: #D1FCE9;
-  color: #cc33ad;
-  box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
-  border-radius: 2px;
-  cursor: pointer;
-}
-.choice:hover{
-  color: #0B4F6C;
-}
-.choice > span {
-  font-size: 1.1em;
-}
-.dashed-edge{
-  padding: 10px; 
-  border: 2px lightblue dashed;
-  border-radius: 5px; 
-}
-.dashed-edge-tight{
-  border: 2px lightblue solid;
-  border-radius: 5px; 
-  padding: 10px; 
-  margin-bottom: 15vw;
-  margin-left: 25vw;
-  margin-right: 25vw;
-  background-color: whitesmoke;
-}
-
-.explainer {
-  margin-bottom: 5vh;
-  margin-top: 1vh;
-  font-size: 1.2em;
-}
-.explainer > p {
-  background-image: linear-gradient(185deg, rgba(209, 252, 233, .9) 0%, gold 135%); 
-  padding: 10px;
 }
 .flex-box {
   display: flex;
@@ -126,25 +74,6 @@ a:hover {
   flex-wrap: wrap;
   justify-content: flex-end;
 }
-.float-bottom {
-  text-align: center;
-}
-footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: rgb(88, 83, 83);
-  color: white;
-  display: flex;
-  flex-direction: row; 
-  justify-content: flex-end;
-  height: 7vh; 
-  padding: 10px; 
-}
-.gray {
-  background: linear-gradient(rgba(204, 51, 173, .3));
-}
 .greeting {
   padding-left: 8px;
 }
@@ -171,11 +100,7 @@ h3 {
   text-transform: uppercase;
   font-size: 1.5em; 
 }
-.highlight {
-  color: #cc33ad;
-  font-size: 2.5em;
-  line-height: 1em;
-}
+
 html, body {
   margin: 5px; 
   color: rgb(71, 68, 68);
@@ -257,7 +182,7 @@ p:hover {
 }
 .square {
   border-radius: 0;
-height: 100%;
+  width: 100%;
 }
 .subheading { 
   margin-left: 1%; 
